<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ems_menu_screen_2"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/white"
    android:focusable="true"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/LinearLayout01"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" >

        <Button
            android:id="@+id/next_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dip"
            android:onClick="HandleButton"
            android:text="@string/next" >
        </Button>

        <Button
            android:id="@+id/back_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="20dip"
            android:onClick="HandleButton"
            android:text="@string/back" >
        </Button>
    </RelativeLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
       android:layout_marginBottom="72dip"
    	android:layout_above="@+id/LinearLayout01" 
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dip"
                android:gravity="center"
                android:shadowColor="@color/title_shadow"
                android:shadowDx="2"
                android:shadowDy="2"
                android:shadowRadius="1"
                android:text="Damage Data 1"
                android:textColor="@android:color/black"
                android:textSize="@dimen/title_size" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/ems98_2_address"
                android:textColor="@android:color/black"
                android:textStyle="bold" >
            </TextView>

            <EditText
                android:id="@+id/address"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >
            </EditText>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/ems98_2_occupancy_type"
                android:textColor="@android:color/black"
                android:textStyle="bold" >
            </TextView>

            <Spinner
                android:id="@+id/occupancy_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
            </Spinner>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="If other..."
                android:textColor="@android:color/black"
                android:textStyle="bold" >
            </TextView>

            <EditText
                android:id="@+id/other_occupancy"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:maxLength="400"
                android:maxLines="1" >
            </EditText>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/ems98_2_storeys"
                android:textColor="@android:color/black"
                android:textStyle="bold" >
            </TextView>

            <EditText
                android:id="@+id/storeys"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="3" >
            </EditText>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/ems98_2_storeys_below"
                android:textColor="@android:color/black"
                android:textStyle="bold" >
            </TextView>

            <EditText
                android:id="@+id/storeys_below"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="3"
                android:nextFocusDown="@+id/soil_type" >
            </EditText>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/ems98_2_soil_type"
                android:textColor="@android:color/black"
                android:textStyle="bold" >
            </TextView>

            <Spinner
                android:id="@+id/soil_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
            </Spinner>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="If other..."
                android:textColor="@android:color/black"
                android:textStyle="bold" >
            </TextView>

            <EditText
                android:id="@+id/other_soil"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:maxLength="400"
                android:maxLines="1" >
            </EditText>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/ems98_2_sloping_ground"
                android:textColor="@android:color/black"
                android:textStyle="bold" >
            </TextView>

            <Spinner
                android:id="@+id/spinner_sloping"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
            </Spinner>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/ems98_2_reg_plan"
                android:textColor="@android:color/black"
                android:textStyle="bold" >
            </TextView>

            <Spinner
                android:id="@+id/spinner_reg_plan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
            </Spinner>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/ems98_2_reg_elev"
                android:textColor="@android:color/black"
                android:textStyle="bold" >
            </TextView>

            <Spinner
                android:id="@+id/spinner_reg_elev"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
            </Spinner>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/ems98_2_secondary"
                android:textColor="@android:color/black"
                android:textStyle="bold" >
            </TextView>

            <EditText
                android:id="@+id/secondary"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:maxLength="500" >
            </EditText>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/ems98_2_original_assess"
                android:textColor="@android:color/black"
                android:textStyle="bold" >
            </TextView>

            <Spinner
                android:id="@+id/original_assess"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
            </Spinner>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/ems98_2_reassess"
                android:textColor="@android:color/black"
                android:textStyle="bold" >
            </TextView>

            <Spinner
                android:id="@+id/reassess"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
            </Spinner>
        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dip" >


    </RelativeLayout>

</RelativeLayout>