<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/menu_screen"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >

    
    
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@android:color/white"
        android:orientation="vertical" >

        
        <RelativeLayout
            android:id="@+id/relative_view1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_marginTop="0dip" >
        </RelativeLayout>

        <!--
        <Button
            android:id="@+id/btn_map_view"
            android:layout_width="80dip"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView1"
            android:layout_toRightOf="@+id/help"
            android:gravity="center"
            
            android:onClick="HandleButton"
            android:text="@string/map_view_button" />
        -->

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true" >

            <Button
                android:id="@+id/settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="HandleButton"
                android:text="@string/settings_button" />

            <Button
                android:id="@+id/btn_sync_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="HandleButton"
                android:text="@string/sync_data_button" />

            <Button
                android:id="@+id/btn_survey_summary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="HandleButton"
                android:text="@string/survey_summary_button" />

            <Button
                android:id="@+id/ems98_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="HandleButton"
                android:text="Survey" />
        </LinearLayout>

        <Button
            android:id="@+id/about"
            android:layout_width="80dip"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:onClick="HandleButton"
            android:text="@string/about_button" />

        <Button
            android:id="@+id/help"
            android:layout_width="80dip"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/about"
            android:layout_alignBottom="@+id/about"
            android:layout_alignParentLeft="true"
            android:gravity="center"
            android:onClick="HandleButton"
            android:text="@string/help_button" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/about"
            android:src="@drawable/gem_logo" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/imageView1"
            android:gravity="center"
            android:shadowColor="@color/title_shadow"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="1"
            android:text="@string/menu_title"
            android:textColor="@android:color/black"
            android:textSize="@dimen/title_size" />

    </RelativeLayout>

</RelativeLayout>