<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ems_menu_screen_1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dip"
                android:gravity="center"
                android:shadowColor="@color/title_shadow"
                android:shadowDx="2"
                android:shadowDy="2"
                android:shadowRadius="1"
                android:text="Survey Details"
                android:textColor="@android:color/black"
                android:textSize="@dimen/title_size" />

            <TextView
                android:id="@+id/heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/file_name"
                android:textColor="@android:color/black"
                android:textSize="@dimen/selection_size"
                android:textStyle="bold" >
            </TextView>

            <TextView
                android:id="@+id/file_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginBottom="6.5dip"
                android:inputType="text"
                android:textColor="@android:color/black" >
            </TextView>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginBottom="10dip"
                android:text="@string/ems_1_explanation"
                android:textColor="@android:color/black"
                android:textSize="@dimen/explanation"
                android:textStyle="italic" >
            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/earthquake"
                android:textColor="@android:color/black"
                android:textStyle="bold" >
            </TextView>

            <TextView
                android:id="@+id/ems98_1_earthquake"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black" >
            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/surveyor"
                android:textColor="@android:color/black"
                android:textStyle="bold" >
            </TextView>

            <TextView
                android:id="@+id/ems98_1_surveyor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black" >
            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textColor="@android:color/black"
                android:textStyle="bold" >
            </TextView>

            <TextView
                android:id="@+id/ems98_1_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black" >
            </TextView>

            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="Timestamp"
                android:textColor="@android:color/black"
                android:textStyle="bold" >
            </TextView>

            <TextView
                android:id="@+id/time_stamp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginBottom="6.5dip"
                android:textColor="@android:color/black" >
            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/survey_name"
                android:textColor="@android:color/black"
                android:textStyle="bold" >
            </TextView>

            <TextView
                android:id="@+id/ems98_1_survey_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black" >
            </TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_alignParentBottom="true" >

                <Button
                    android:id="@+id/back_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="HandleButton"
                    android:text="Main Menu" >
                </Button>

                <Button
                    android:id="@+id/settings_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_weight="1"
                    android:onClick="HandleButton"
                    android:text="Settings Menu" >
                </Button>

                <Button
                    android:id="@+id/next_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="HandleButton"
                    android:text="@string/next" >
                </Button>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>