<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ems_menu_screen_1"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/white"
    >


    <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">
    
    
    
 <TextView
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:textColor="@android:color/black"
    android:text="Camera"
    android:gravity="center"
    android:layout_marginBottom="25dip"
    android:textSize="@dimen/title_size"
    android:shadowColor="@color/title_shadow"
    android:shadowDx="2"
    android:shadowDy="2"
    android:shadowRadius="1"/>
    

  <Button
    android:id="@+id/take_image"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:text="@string/take_image"
 	android:layout_marginTop="20dip"
    android:onClick="HandleButton">
    </Button>
    <TextView
    android:id="@+id/image_file_name"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:textStyle="bold"
    android:textColor="@android:color/black"
    android:layout_marginTop="13dip"
    android:text="Image filename will be displayed here when image is captured">
    </TextView>
    <ImageView
    android:id="@+id/camera_image"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:paddingTop="5dip"
    android:shadowColor="@color/title_shadow"
    android:shadowDx="2"
    android:shadowDy="2"
    android:shadowRadius="1">
    </ImageView>
   <RelativeLayout
   android:layout_width="fill_parent"
   android:layout_height="wrap_content"
   android:layout_marginTop="20dip">
   <Button
   android:id="@+id/next_camera"
   android:layout_width="wrap_content"
   android:layout_height="wrap_content"
   android:text="@string/next"
   android:layout_alignParentRight="true"
   android:layout_marginRight="10dip"
   android:onClick="HandleButton">
    </Button>
    <Button
   android:id="@+id/back_camera"
   android:layout_width="wrap_content"
   android:layout_height="wrap_content"
   android:text="@string/back"
   android:layout_alignParentLeft="true"
   android:layout_marginRight="10dip"
   android:onClick="HandleButton">
   </Button>
   </RelativeLayout>
   </LinearLayout> 

</LinearLayout>